# Drip

./: .env.example  Anchor.toml  Cargo.toml  DEVNET_DEPLOYMENT.md  MAINNET_READINESS.md  PRODUCTION_BLOCKERS.md  README.md  SECURITY_CHECKLIST.md  TEST_GAPS.md  VALIDATION.md  VENDOR_PATCHES.md  drip_internal_system_plan_md.md  next.config.js  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.ts  tsconfig.json
.github/workflows/: validation.yml
app/: globals.css  layout.tsx
app/compliance/: page.tsx
app/dashboard/: page.tsx
app/docs/: page.tsx
app/faq/: page.tsx
components/compliance/: CompliancePage.tsx
components/dashboard/: DashboardApp.tsx
components/docs/: DocsPage.tsx
components/faq/: FaqPage.tsx
components/landing/: LandingPage.tsx  Waitlist.tsx
components/providers/: AppProviders.tsx  (+2 more)
docs/: waitlist.sql
grant-application/: AGENTIC_ENGINEERING_PROCESS.md  DRIVE_UPLOAD_CHECKLIST.md  GRANT_APPLICATION.md  MILESTONES.md  PRIMARY_KPI.md  PROJECT_DETAILS.md  PROOF_OF_WORK.md
lib/: chain.ts  format.ts  mock-data.ts  rates.ts  types.ts
programs/drip/: Cargo.toml
programs/drip/src/: lib.rs
scripts/: check-solana-toolchain.mjs  run-wsl-validation.sh  wsl-validation-env.sh
stellar/: Cargo.toml
stellar/contracts/drip_stream/: Cargo.toml
stellar/contracts/drip_stream/src/: lib.rs
stellar/contracts/drip_stream/test_snapshots/tests/: test_cancel_after_partial_withdraw.1.json  test_cancel_stream.1.json  test_cancel_transfers_correct_amounts.1.json  test_cancelled_blocks_withdraw.1.json  test_create_stream.1.json  test_create_stream_holds_custody.1.json  test_double_cancel_panics.1.json  test_get_stream_state.1.json  test_pause_adjusts_vesting.1.json  test_pause_stream.1.json  test_resume_stream.1.json  test_withdraw_completes_stream.1.json  test_withdraw_transfers_to_receiver.1.json  test_withdraw_vested.1.json
tests/: drip.ts
(+25 files in other folders)
