[package]
name = "drip"
version = "0.1.0"
description = "DRIP native SOL streaming payments program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drip"

[features]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"

# Solana 1.18.26 SBF platform tools use an older Cargo/Rust stack than modern
# crates.io latests. These exact pins keep the resolved graph compatible with
# Anchor 0.30.1 and cargo-build-sbf 1.18.26.
ahash = "=0.8.11"
blake3 = "=1.5.0"
borsh = "=1.3.1"
ppv-lite86 = "=0.2.17"
unicode-segmentation = "=1.10.1"

[build-dependencies]
# Host-side proc-macro dependencies also need to stay inside the Solana 1.18
# compatible range because Anchor builds the IDL during `anchor test`.
indexmap = "=2.7.1"
proc-macro-crate = "=3.1.0"
cc = "=1.0.83"
jobserver = "=0.1.26"
proc-macro2 = "=1.0.106"
rayon = "=1.10.0"
rayon-core = "=1.12.1"
serde = "=1.0.197"
serde_derive = "=1.0.197"
wasm-bindgen = "=0.2.92"
