[package]
name = "drip-stream"
version = "0.1.0"
edition = "2021"
description = "DRIP payment stream Soroban contract for Stellar Testnet"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk = { version = "22.0.0" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils", "alloc"] }
